# easyvoice

./: .coverage  .flake8  .gitignore  INSTALL.md  README.md  install-easyvoice  install-easyvoice.ps1  install.bat  install.ps1  install.sh  memories.json  project.md  pyproject.toml  research_kittentts_onnx_expand_error.md  run_basic_tests.py  tech_stack_verification_report.md  test_cli_interactive.py  test_complete_system.py  test_global_install.py  voice-agent-tech-stack.md
easyvoice/: __init__.py  __main__.py  cli.py  interactive_cli.py
easyvoice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
easyvoice/agent/: __init__.py  core.py  llm.py  llm_custom.py  llm_openai.py  memory.py  tools.py
easyvoice/audio/: __init__.py  input.py  stt.py  stt_openai.py  tts.py
easyvoice/config/: __init__.py  settings.py
easyvoice/ui/: __init__.py
tests/: __init__.py  conftest.py  test_basic_imports.py
tests/features/: audio_input.feature  cli_commands.feature  conversation_flow.feature  integration.feature  llm_integration.feature  memory.feature  speech_recognition.feature  text_to_speech.feature  tools.feature
tests/step_definitions/: test_audio_input_steps.py  test_cli_commands_steps.py  test_conversation_flow_steps.py  test_llm_integration_steps.py  test_memory_steps.py  test_speech_recognition_steps.py  test_text_to_speech_steps.py  test_tools_steps.py
